crates/cfn-lsp/src/snapshots/cfn_lsp__queries__tests__json__extract_all_from_json.snap
---
source: crates/cfn-lsp/src/queries.rs
expression: refs
---
- typ:
    Ref:
      target: ServerlessDeploymentBucket
  start:
    line: 22
    col: 18
  end:
    line: 22
    col: 44
- typ:
    Ref:
      target: "AWS::Partition"
  start:
    line: 37
    col: 32
  end:
    line: 37
    col: 46
- typ:
    Ref:
      target: ServerlessDeploymentBucket
  start:
    line: 41
    col: 32
  end:
    line: 41
    col: 58
- typ:
    Ref:
      target: "AWS::Partition"
  start:
    line: 53
    col: 32
  end:
    line: 53
    col: 46
- typ:
    Ref:
      target: ServerlessDeploymentBucket
  start:
    line: 57
    col: 32
  end:
    line: 57
    col: 58
- typ:
    Ref:
      target: "AWS::Region"
  start:
    line: 149
    col: 24
  end:
    line: 149
    col: 35
- typ:
    Ref:
      target: ServerlessDeploymentBucket
  start:
    line: 162
    col: 20
  end:
    line: 162
    col: 46
- typ:
    Ref:
      target: ApiGatewayRestApi
  start:
    line: 205
    col: 18
  end:
    line: 205
    col: 35
- typ:
    Ref:
      target: ApiGatewayRestApi
  start:
    line: 221
    col: 18
  end:
    line: 221
    col: 35
- typ:
    Ref:
      target: "AWS::Partition"
  start:
    line: 234
    col: 26
  end:
    line: 234
    col: 40
- typ:
    Ref:
      target: "AWS::Region"
  start:
    line: 238
    col: 26
  end:
    line: 238
    col: 37
- typ:
    Ref:
      target: ApiGatewayResourceAnyVar
  start:
    line: 264
    col: 18
  end:
    line: 264
    col: 42
- typ:
    Ref:
      target: ApiGatewayRestApi
  start:
    line: 267
    col: 18
  end:
    line: 267
    col: 35
- typ:
    Ref:
      target: "AWS::Partition"
  start:
    line: 280
    col: 26
  end:
    line: 280
    col: 40
- typ:
    Ref:
      target: "AWS::Region"
  start:
    line: 284
    col: 26
  end:
    line: 284
    col: 37
- typ:
    Ref:
      target: ApiGatewayRestApi
  start:
    line: 308
    col: 18
  end:
    line: 308
    col: 35
- typ:
    Ref:
      target: "AWS::Partition"
  start:
    line: 334
    col: 24
  end:
    line: 334
    col: 38
- typ:
    Ref:
      target: "AWS::Region"
  start:
    line: 338
    col: 24
  end:
    line: 338
    col: 35
- typ:
    Ref:
      target: "AWS::AccountId"
  start:
    line: 342
    col: 24
  end:
    line: 342
    col: 38
- typ:
    Ref:
      target: ApiGatewayRestApi
  start:
    line: 346
    col: 24
  end:
    line: 346
    col: 41
- typ:
    Ref:
      target: ServerlessDeploymentBucket
  start:
    line: 358
    col: 16
  end:
    line: 358
    col: 42
- typ:
    Ref:
      target: ApiGatewayRestApi
  start:
    line: 372
    col: 22
  end:
    line: 372
    col: 39
- typ:
    Ref:
      target: "AWS::Region"
  start:
    line: 376
    col: 22
  end:
    line: 376
    col: 33
- typ:
    Ref:
      target: "AWS::URLSuffix"
  start:
    line: 380
    col: 22
  end:
    line: 380
    col: 36
- typ:
    Sub:
      target: "arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/test-service-local*:*"
  start:
    line: 122
    col: 34
  end:
    line: 122
    col: 137
- typ:
    Sub:
      target: "arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/test-service-local*:*:*"
  start:
    line: 133
    col: 34
  end:
    line: 133
    col: 139
- typ:
    GetAtt:
      target: IamRoleLambdaExecution
  start:
    line: 173
    col: 13
  end:
    line: 173
    col: 35
- typ:
    GetAtt:
      target: ApiGatewayRestApi
  start:
    line: 199
    col: 13
  end:
    line: 199
    col: 30
- typ:
    GetAtt:
      target: ApiGatewayRestApi
  start:
    line: 216
    col: 13
  end:
    line: 216
    col: 30
- typ:
    GetAtt:
      target: ApiLambdaFunction
  start:
    line: 243
    col: 21
  end:
    line: 243
    col: 38
- typ:
    GetAtt:
      target: ApiLambdaFunction
  start:
    line: 289
    col: 21
  end:
    line: 289
    col: 38
- typ:
    GetAtt:
      target: ApiLambdaFunction
  start:
    line: 322
    col: 13
  end:
    line: 322
    col: 30
- typ:
    DependsOn:
      target: ApiLogGroup
  start:
    line: 179
    col: 9
  end:
    line: 179
    col: 20
- typ:
    DependsOn:
      target: ApiLambdaPermissionApiGateway
  start:
    line: 255
    col: 9
  end:
    line: 255
    col: 38
- typ:
    DependsOn:
      target: ApiLambdaPermissionApiGateway
  start:
    line: 301
    col: 9
  end:
    line: 301
    col: 38
- typ:
    DependsOn:
      target: ApiGatewayMethodAny
  start:
    line: 313
    col: 9
  end:
    line: 313
    col: 28
- typ:
    DependsOn:
      target: ApiGatewayMethodAnyVarAny
  start:
    line: 314
    col: 9
  end:
    line: 314
    col: 34
